# repair-ai-assistant

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/manuals/: sample_manual.md
docs/sdd/: 01_requirements.md  02_design.md  03_tasks.md  04_acceptance_criteria.md  05_v0.2_structured_output.md  06_v0.3_rag_manual_qa.md
src/repair_assistant/: __init__.py  chains.py  config.py  main.py  rag.py  rag_cli.py  schemas.py
tests/: test_chains.py  test_config.py  test_main.py  test_rag.py  test_rag_cli.py  test_schemas.py
